fix: inert ConfirmDialog actions on prod lazy-loaded routes (tournament list Delete)
The tournament list's Delete button (and every other ConfirmDialog behind a
lazy DYNAMIC_IMPORT) silently did nothing in production builds: the server
asked the client to lazy-load vaadin-confirm-dialog by hash, but that hash
was absent from the client's lazy-import map, so loadOnDemand resolved
without ever defining the custom element. The dialog node stayed an inert
placeholder while the connection indicator showed "Online". Title list
happened to work only because its route bundle includes the module eagerly.

Fix by making the app entry (frontend/index.tsx, overriding the generated
one) eagerly import '@vaadin/confirm-dialog/src/vaadin-confirm-dialog.js'.
A @JsModule on AppShell was tried first but Vite relegated it to a lazy
chunk; the custom entry lands in the eager indexhtml chunk.

Also on the tournament list grid:
- Actions column gets setKey("actions") (test targeting)
- Row-click navigation now ignores clicks in the Actions cell so opening
  Edit/Delete dialogs isn't destroyed by instant navigation
- Actions column is AutoWidth so both buttons fit

Verified end-to-end in the sandbox: dialog opens on row Delete click,
confirm deletes the tournament (notification shown, row removed), cancel
closes. Karibu row-click regression test added (TournamentListViewTest,
15/15 pass).

Also reverted the uncommitted package.json 25.2.7 drift (npm packages must
match the 25.2.6 Maven platform) which caused the hash skew in the first
place.

Co-Authored-By: Claude Code <noreply@anthropic.com>